<resources>
	<string name="lang"></string>
    <string name="title_activity_main">&quot;Avare&quot;</string>
    <string name="Maps">&quot;Maps&quot;</string>
    <string name="MapsLabel">&quot;Charts Storage Folder&quot;</string>
    <string name="MapsSummary">&quot;Location where charts are stored&quot;</string>
    <string name="OrientationP">&quot;OrientationP&quot;</string>
    <string name="OrientationPLabel">&quot;Screen Orientation&quot;</string>
    <string name="OrientationPSummary">&quot;Select a screen orientation&quot;</string>
    <string name="GpsTime">&quot;GpsTime&quot;</string>
    <string name="GpsTimeLabel">&quot;Short GPS Update Period&quot;</string>
    <string name="GpsTimeSummary">&quot;Select for shorter GPS update period&quot;</string>
    <string name="GpsOffWarn">&quot;GpsOffWarn&quot;</string>
    <string name="GpsOffWarnLabel">&quot;Warn GPS Disabled&quot;</string>
    <string name="GpsOffWarnSummary">&quot;Select to warn frequently when GPS is disabled&quot;</string>
    <string name="ShowTrack">&quot;ShowTrack&quot;</string>
    <string name="ShowTrackLabel">&quot;Destination Course Line&quot;</string>
    <string name="ShowTrackSummary">&quot;Select to show course to destination&quot;</string>
    <string name="Main">&quot;Map&quot;</string>
    <string name="Plates">&quot;Plate&quot;</string>
    <string name="AFD">&quot;CSup&quot;</string>
    <string name="ThreeD">&quot;3D&quot;</string>
    <string name="Units">&quot;Distance Unit&quot;</string>
    <string name="UnitsLabel">&quot;Distance Unit&quot;</string>
    <string name="UnitsSummary">&quot;Select distance unit&quot;</string>
    <string name="AllFacilities">&quot;All Facilities&quot;</string>
    <string name="AllFacilitiesLabel">&quot;Show All Bases&quot;</string>
    <string name="AllFacilitiesSummary">&quot;Select to show heliport, ultralight, and sea plane bases in Nearest and Search&quot;</string>
    <string name="Runways">&quot;Runway Extensions&quot;</string>
    <string name="RunwaysLabel">&quot;Runway Extensions&quot;</string>
    <string name="RunwaysSummary">&quot;Select to show runway extensions&quot;</string>
    <string name="AutoShowAirportDiagram">&quot;Auto Show Airport Diagram&quot;</string>
    <string name="AutoShowAirportDiagramLabel">&quot;Auto Show Airport Diagram&quot;</string>
    <string name="AutoShowAirportDiagramSummary">&quot;Select to automatically show airport diagrams on rollout&quot;</string>
    <string name="Background">&quot;Background&quot;</string>
    <string name="BackgroundLabel">&quot;Show Background&quot;</string>
    <string name="BackgroundSummary">&quot;Select to use a color background on text, to improve readability on smaller screens&quot;</string>
    <string name="NightMode">&quot;Night Mode&quot;</string>
    <string name="NightModeLabel">&quot;Night Mode (requires restart)&quot;</string>
    <string name="NightModeSummary">&quot;Select to reduce white light during night operation&quot;</string>
    <string name="Plan">&quot;Plan&quot;</string>
    <string name="Root">&quot;Root&quot;</string>
    <string name="RootLabel">&quot;Charts Download Server&quot;</string>
    <string name="RootSummary">&quot;Select a server from which to download charts/data&quot;</string>
    <string name="Near">&quot;Near&quot;</string>
    <string name="Find">&quot;Find&quot;</string>
    <string name="XlateWeather">&quot;XlateWeather&quot;</string>
    <string name="XlateWeatherLabel">&quot;Translate Weather&quot;</string>
    <string name="XlateWeatherSummary">&quot;Select to translate weather METAR/TAF/PIREP in the WX brief&quot;</string>
    <string name="AirSigType">&quot;AIRMET/SIGMET&quot;</string>
    <string name="AirSigTypeLabel">&quot;AIRMET/SIGMET Type&quot;</string>
    <string name="AirSigTypeSummary">&quot;Select which color coded polygons to show on Map&quot;</string>
    <string name="prefStorageAndDownloadsCategoryTitle">Storage and Downloads</string>
    <string name="prefGpsCategoryTitle">GPS</string>
    <string name="prefWeatherCategoryTitle">Weather</string>
    <string name="prefDisplayCategoryTitle">Display</string>
    <string name="prefAppStateCategoryTitle">Application State</string>
    <string name="prefDistanceRingType">DistanceRingType</string>
    <string name="DistanceRingTypeLabel">&quot;Distance Ring Style&quot;</string>
    <string name="DistanceRingTypeSummary">&quot;Select the style of distance rings to display&quot;</string>
    <string name="prefDistanceRingColors">DistanceRingColors</string>
    <string name="DistanceRingColorsLabel">&quot;Distance Ring Colors&quot;</string>
    <string name="DistanceRingColorsSummary">&quot;Select the color of distance rings&quot;</string>
    <string name="prefTimerRingSize">TimerRingSize</string>
    <string name="TimerRingSizeLabel">&quot;Timer Ring Size&quot;</string>
    <string name="TimerRingSizeSummary">&quot;Select the timer ring size in minutes&quot;</string>
    <string name="prefTracksCategoryTitle">Flight Tracking</string>
    <string name="TrkUpdAllow">TrkUpdAllow</string>
    <string name="TrkUpdAllowLabel">&quot;Enable Tracking&quot;</string>
    <string name="TrkUpdAllowSummary">&quot;Select to allow position tracking to be recorded.&quot;</string>
    <string name="TrkUpdShowHistory">TrkUpdShowHistory</string>
    <string name="TrkUpdShowHistoryLabel">&quot;Track History&quot;</string>
    <string name="TrkUpdShowHistorySummary">&quot;Select to display the flight path track on the active chart&quot;</string>
    <string name="prefAutoPostTracks">AutoPostTracks</string>
    <string name="AutoPostTracksLabel">&quot;Automatic Track Post&quot;</string>
    <string name="AutoPostTracksSummary">&quot;Select what to do with the KML tracks file when closed&quot;</string>
    <string name="Zero">&quot;0&quot;</string>
    <string name="ADSBWeather">ADSBWeather</string>
    <string name="ADSBWeatherLabel">&quot;Use ADSB Weather&quot;</string>
    <string name="ADSBWeatherSummary">&quot;Select for weather from an ADSB receiver, unselect for weather downloaded from Internet&quot;</string>
    <string name="prefUseDynamicFields">UseDynamicFields</string>
    <string name="UseDynamicFieldsLabel">&quot;Use Dynamic Fields&quot;</string>
    <string name="UseDynamicFieldsSummary">&quot;Allow the top two text lines to be configured dynamically&quot;</string>
    <string name="prefShowCDI">ShowCDI</string>
    <string name="ShowCDILabel">&quot;Show CDI/VDI&quot;</string>
    <string name="ShowCDISummary">&quot;Display the course/vertical deviation indicators on the screen&quot;</string>
    <string name="EdgeTape">&quot;EdgeTape&quot;</string>
    <string name="EdgeTapeLabel">&quot;Edge Tape&quot;</string>
    <string name="EdgeTapeSummary">&quot;Select to show a distance tape on the edges&quot;</string>
    <string name="Instrumentation">&quot;Instrumentation&quot;</string>
    <string name="ProServicesTitle">Subscription</string>
    <string name="ProServicesSubscribe">Subscribe</string>
    <string name="ProServicesDescription">Sign in with your email to create or restore your account, then subscribe to Avare Paid. Free users may hold at most one chart per category (Databases and Weather/TFRs are always free); Paid subscribers can hold as many charts as they like. Updates to charts you already have are always allowed.</string>
    <string name="ProSignInRegister">Sign in / Register</string>
    <string name="ProSignOut">Sign out</string>
    <string name="ProClose">Close</string>
    <string name="List">List</string>
    <string name="online">Account</string>
    <string name="onlineSummary">Register or unregister your Apps4Av server account (also used for 1800wxbrief.com integration)</string>
    <string name="ETABearing">&quot;ETABearing&quot;</string>
    <string name="ETABearingLabel">&quot;ETA/ETE Bearing&quot;</string>
    <string name="ETABearingSummary">&quot;Select to calculate ETA/ETE considering the relative bearing to the destination&quot;</string>
    <string name="DisplayIcon">&quot;DisplayIcon&quot;</string>
    <string name="DisplayIconLabel">&quot;Location Display Icon (requires restart)&quot;</string>
    <string name="DisplayIconSummary">&quot;Select the type of icon used to show your location.&quot;</string>
    <string name="Cycle">Cycle</string>
    <string name="CycleLabel">Chart Download Cycle</string>
    <string name="CycleSummary">Select which cycle to download the charts from</string>
    <string name="ExtendInfoLines">ExtendInfoLines</string>
    <string name="ExtendInfoLinesLabel">Show Status Area on Plates</string>
    <string name="ExtendInfoLinesSummary">Select to show the configuable status area on the Plate screen</string>
    <string name="UDWLocation">&quot;UserLocation&quot;</string>
    <string name="UDWLabel">&quot;User Data Folder&quot;</string>
    <string name="UDWSummary">&quot;Select the directory where user data is stored.&quot;</string>
    <string name="TabBarTitle">&quot;Tab Bar Content (requires restart)&quot;</string>
    <string name="TabBarSummary">&quot;Select which tabs to show on the bottom bar.&quot;</string>
    <string name="PlatesSummary">&quot;Approach/Departure Plates and Airport diagrams.&quot;</string>
	<string name="AFDSummary">&quot;Airport Facilitiy Directory information.&quot;</string>
    <string name="FindSummary">&quot;Search for airports and navaids.&quot;</string>
	<string name="PlanSummary">&quot;Flight plan creation and management.&quot;</string>
	<string name="NearSummary">&quot;Nearest airport information and navigation data.&quot;</string>
	<string name="ChecklistSummary">&quot;User defined checklists and management.&quot;</string>
    <string name="GPSSummary">&quot;Current settings, GPS status/satellite display.&quot;</string>
	<string name="prefTabPlates">&quot;prefTabPlates&quot;</string>
    <string name="prefTabAFD">&quot;prefTabAFD&quot;</string>
	<string name="prefTabFind">&quot;prefTabFind&quot;</string>
	<string name="prefTabPlan">&quot;prefTabPlan&quot;</string>
	<string name="prefTabNear">&quot;prefTabNear&quot;</string>
	<string name="externalGps">GPSExternalOrInternal</string>
    <string name="externalGpsLabel">GPS Position Source</string>
    <string name="externalGpsSummary">Select the source of GPS position data</string>
    <string name="rubberBand">RubberBand</string>
    <string name="rubberBandLabel">Use Rubber Banding</string>
    <string name="rubberBandSummary">Select to use rubber banding on flight plan route</string>
    <string name="Tools">Tools</string>
    <string name="blinkScreen">BlinkScreen</string>
    <string name="blinkScreenLabel">Blink Screen</string>
    <string name="blinkScreenSummary">Select to blink screen when user attention is required</string>
    <string name="runwayLengths">RunwayLengths</string>
    <string name="runwayLengthsLabel">Near Runway Minimum Length</string>
    <string name="runwayLengthsSummary">Show airports in Near with a runway length equal or longer</string>
    <string name="prefPlanControl">&quot;PlanControl&quot;</string>
    <string name="prefPlanControlLabel">&quot;Show Flight Plan Controls&quot;</string>
    <string name="prefPlanControlSummary">&quot;Select to display flight plan control buttons on chart view&quot;</string>
    <string name="CAPGrid">&quot;CAPGrids&quot;</string>
    <string name="CAPGridSummary">&quot;Select to show the US Civil Air Patrol grids on the map.&quot;</string>
    <string name="CAPGridLabel">&quot;Show CAP Grids&quot;</string>
    <string name="Obstacles">Obstacles</string>
    <string name="ObstaclesSummary">Show obstacles on map</string>
    <string name="ObstaclesLabel">Show Obstacles</string>
    <string name="GameTFRLabel">&quot;Show Stadiums&quot;</string>
    <string name="GameTFR">&quot;GameTFR&quot;</string>
    <string name="GameTFRSummary">&quot;Select to show the location of known stadiums&quot;</string>
</resources>