<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright (c) 2012, Apps4Av Inc. (apps4av.com)
All rights reserved.

Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:

    * Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
    *     * Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
    *
    *     THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

authors: zkhan, jlmcgraw    
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceScreen 
        android:title="@string/prefStorageAndDownloadsCategoryTitle" 
        android:icon="@android:drawable/ic_menu_save" >
        <com.ds.avare.utils.FolderPreference
            android:key="@string/Maps"
            android:summary="@string/MapsSummary"
            android:title="@string/MapsLabel" />
        <com.ds.avare.utils.ListPreferenceWithSummary
            android:defaultValue="@string/Zero"
            android:entries="@array/Server"
            android:entryValues="@array/ServerValues"
            android:key="@string/Root"
            android:summary="@string/RootSummary"
            android:title="@string/RootLabel" />
        <com.ds.avare.utils.ListPreferenceWithSummary
            android:defaultValue="@string/Zero"
            android:entries="@array/CyclePrompt"
            android:entryValues="@array/CycleValues"
            android:key="@string/Cycle"
            android:summary="@string/CycleSummary"
            android:title="@string/CycleLabel" />
        <com.ds.avare.utils.FolderPreference
            android:key="@string/UDWLocation"
            android:summary="@string/UDWSummary"
            android:title="@string/UDWLabel" />
        <EditTextPreference
            android:defaultValue=""
            android:key="@string/GeoCode"
            android:summary="@string/GeoCodeSummary"
            android:title="@string/GeoCodeLabel" />
        </PreferenceScreen>

    <PreferenceScreen 
        android:title="@string/prefGpsCategoryTitle" 
        android:icon="@android:drawable/ic_menu_mylocation" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/GpsTime"
            android:summary="@string/GpsTimeSummary"
            android:title="@string/GpsTimeLabel" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/GpsOffWarn"
            android:summary="@string/GpsOffWarnSummary"
            android:title="@string/GpsOffWarnLabel" />
        <com.ds.avare.utils.ListPreferenceWithSummary
            android:defaultValue="0"
            android:entries="@array/GpsPosition"
            android:entryValues="@array/GpsPositionValues"
            android:key="@string/externalGps"
            android:summary="@string/externalGpsSummary"
            android:title="@string/externalGpsLabel" />
    </PreferenceScreen>
    
    <PreferenceScreen 
        android:title="@string/prefWeatherCategoryTitle" 
        android:icon="@android:drawable/ic_menu_call" >
        <com.ds.avare.utils.ListPreferenceWithSummary
            android:defaultValue="255"
            android:entries="@array/Opacity"
            android:entryValues="@array/OpacityValues"
            android:key="@string/Radar"
            android:summary="@string/RadarSummary"
            android:title="@string/RadarLabel" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/ADSBWeather"
            android:summary="@string/ADSBWeatherSummary"
            android:title="@string/ADSBWeatherLabel" />
        <com.ds.avare.utils.ListPreferenceWithSummary
            android:defaultValue="ALL"
            android:entries="@array/AirSig"
            android:entryValues="@array/AirSig"
            android:key="@string/AirSigType"
            android:summary="@string/AirSigTypeSummary"
            android:title="@string/AirSigTypeLabel" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/XlateWeather"
            android:summary="@string/XlateWeatherSummary"
            android:title="@string/XlateWeatherLabel" />
    </PreferenceScreen>

    <PreferenceScreen 
        android:title="@string/prefAppStateCategoryTitle" 
        android:icon="@android:drawable/ic_menu_mapmode" >
        <com.ds.avare.utils.RegisterActivityPreference
            android:summary="@string/onlineSummary"
            android:title="@string/online" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/LeaveRunning"
            android:summary="@string/LeaveRunningSummary"
            android:title="@string/LeaveRunningLabel" />
        <com.ds.avare.utils.ListPreferenceWithSummary
            android:defaultValue="0"
            android:entries="@array/UnitsD"
            android:entryValues="@array/UnitsDValues"
            android:key="@string/Units"
            android:summary="@string/UnitsSummary"
            android:title="@string/UnitsLabel" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/prefUseDynamicFields"
            android:summary="@string/UseDynamicFieldsSummary"
            android:title="@string/UseDynamicFieldsLabel" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/blinkScreen"
            android:summary="@string/blinkScreenSummary"
            android:title="@string/blinkScreenLabel" />
    </PreferenceScreen>

    <PreferenceScreen 
        android:title="@string/Instrumentation" 
        android:icon="@android:drawable/ic_menu_preferences" >
        <EditTextPreference
                android:title="@string/GlideRatioLabel"
                android:summary="@string/GlideRatioSummary"
                android:key="@string/GlideRatio"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/EdgeTape"
            android:summary="@string/EdgeTapeSummary"
            android:title="@string/EdgeTapeLabel" />
        <com.ds.avare.utils.ListPreferenceWithSummary
            android:defaultValue="0"
            android:entries="@array/DistanceRingTypePrompts"
            android:entryValues="@array/DistanceRingTypeValues"
            android:key="@string/prefDistanceRingType"
            android:summary="@string/DistanceRingTypeSummary"
            android:title="@string/DistanceRingTypeLabel" />
        <com.ds.avare.utils.ListPreferenceWithSummary
            android:defaultValue="Default"
            android:entries="@array/DistanceRingColors"
            android:entryValues="@array/DistanceRingColors"
            android:key="@string/prefDistanceRingColors"
            android:summary="@string/DistanceRingColorsSummary"
            android:title="@string/DistanceRingColorsLabel" />
        <com.ds.avare.utils.ListPreferenceWithSummary
            android:defaultValue="0"
            android:entries="@array/TimerRingSizePrompt"
            android:entryValues="@array/TimerRingSizeValues"
            android:key="@string/prefTimerRingSize"
            android:summary="@string/TimerRingSizeSummary"
            android:title="@string/TimerRingSizeLabel" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/prefShowCDI"
            android:summary="@string/ShowCDISummary"
            android:title="@string/ShowCDILabel" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/ETABearing"
            android:summary="@string/ETABearingSummary"
            android:title="@string/ETABearingLabel" />
    </PreferenceScreen>
        
    <PreferenceScreen 
        android:title="@string/prefDisplayCategoryTitle" 
        android:icon="@android:drawable/ic_menu_gallery" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/ScreenOn"
            android:summary="@string/ScreenOnSummary"
            android:title="@string/ScreenOnLabel" />
        <com.ds.avare.utils.ListPreferenceWithSummary
            android:defaultValue="Portrait"
            android:entries="@array/Orientation"
            android:entryValues="@array/Orientation"
            android:key="@string/OrientationP"
            android:summary="@string/OrientationPSummary"
            android:title="@string/OrientationPLabel" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/NightMode"
            android:summary="@string/NightModeSummary"
            android:title="@string/NightModeLabel" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/Obstacles"
            android:summary="@string/ObstaclesSummary"
            android:title="@string/ObstaclesLabel" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/ADSBTraffic"
            android:summary="@string/ADSBTrafficSummary"
            android:title="@string/ADSBTrafficLabel" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/GameTFR"
            android:summary="@string/GameTFRSummary"
            android:title="@string/GameTFRLabel" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/CAPGrid"
            android:summary="@string/CAPGridSummary"
            android:title="@string/CAPGridLabel" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/Runways"
            android:summary="@string/RunwaysSummary"
            android:title="@string/RunwaysLabel" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/AutoShowAirportDiagram"
            android:summary="@string/AutoShowAirportDiagramSummary"
            android:title="@string/AutoShowAirportDiagramLabel" />        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/ShowTrack"
            android:summary="@string/ShowTrackSummary"
            android:title="@string/ShowTrackLabel" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/AllFacilities"
            android:summary="@string/AllFacilitiesSummary"
            android:title="@string/AllFacilitiesLabel" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/Background"
            android:summary="@string/BackgroundSummary"
            android:title="@string/BackgroundLabel" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/prefPlanControl"
            android:summary="@string/prefPlanControlSummary"
            android:title="@string/prefPlanControlLabel" />
        <com.ds.avare.utils.ListPreferenceWithSummary
            android:defaultValue="0"
            android:entries="@array/DisplayIconPrompt"
            android:entryValues="@array/DisplayIconValues"
            android:key="@string/DisplayIcon"
            android:summary="@string/DisplayIconSummary"
            android:title="@string/DisplayIconLabel" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/ExtendInfoLines"
            android:summary="@string/ExtendInfoLinesSummary"
            android:title="@string/ExtendInfoLinesLabel" />
        <com.ds.avare.utils.ListPreferenceWithSummary
            android:entries="@array/RunwayLengths"
            android:entryValues="@array/RunwayLengths"
            android:key="@string/runwayLengths"
            android:summary="@string/runwayLengthsSummary"
            android:title="@string/runwayLengthsLabel" />
        <PreferenceScreen 
	        android:title="@string/TabBarTitle" 
            android:summary="@string/TabBarSummary"
	        android:icon="@android:drawable/ic_menu_manage" >
		        <CheckBoxPreference
		            android:defaultValue="true"
		            android:key="@string/prefTabPlates"
		            android:summary="@string/PlatesSummary"
		            android:title="@string/Plates" />
		        <CheckBoxPreference
		            android:defaultValue="true"
		            android:key="@string/prefTabAFD"
		            android:summary="@string/AFDSummary"
		            android:title="@string/AFD" />
		        <CheckBoxPreference
		            android:defaultValue="true"
		            android:key="@string/prefTabFind"
		            android:summary="@string/FindSummary"
		            android:title="@string/Find" />
		        <CheckBoxPreference
		            android:defaultValue="true"
		            android:key="@string/prefTabPlan"
		            android:summary="@string/PlanSummary"
		            android:title="@string/Plan" />
		        <CheckBoxPreference
		            android:defaultValue="true"
		            android:key="@string/prefTabWX"
		            android:summary="@string/WXSummary"
		            android:title="@string/WXB" />
				<CheckBoxPreference
		            android:defaultValue="true"
		            android:key="@string/prefTabNear"
		            android:summary="@string/NearSummary"
		            android:title="@string/Near" />
		        <CheckBoxPreference
		            android:defaultValue="true"
		            android:key="@string/prefTabChecklist"
		            android:summary="@string/ChecklistSummary"
		            android:title="@string/List" />
				<CheckBoxPreference
		            android:defaultValue="true"
		            android:key="@string/prefTabTools"
		            android:summary="@string/GPSSummary"
		            android:title="@string/Tools" />
                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="@string/prefTabTrip"
                    android:summary="@string/TripSummary"
                    android:title="@string/Trip" />
			</PreferenceScreen>
        </PreferenceScreen>

	<PreferenceScreen 
    	    android:title="@string/prefTracksCategoryTitle" 
        	android:icon="@android:drawable/ic_menu_myplaces" >
		<CheckBoxPreference
    	    android:key="@string/TrkUpdAllow"
    	    android:title="@string/TrkUpdAllowLabel"
    	    android:summary="@string/TrkUpdAllowSummary"/>
        <CheckBoxPreference
            android:key="@string/TrkUpdShowHistory"
            android:title="@string/TrkUpdShowHistoryLabel"
            android:summary="@string/TrkUpdShowHistorySummary"/>
        <com.ds.avare.utils.ListPreferenceWithSummary
            android:defaultValue="@string/Zero"
            android:entries="@array/AutoPostTracksPrompts"
            android:entryValues="@array/AutoPostTracksValues"
            android:key="@string/prefAutoPostTracks"
            android:summary="@string/AutoPostTracksSummary"
            android:title="@string/AutoPostTracksLabel" />
        <CheckBoxPreference
            android:defaultValue="true"            
            android:key="@string/rubberBand"
            android:title="@string/rubberBandLabel"
            android:summary="@string/rubberBandSummary"/>
        </PreferenceScreen>
    
</PreferenceScreen>
